# informifier

./: README.md  fabriquer_les_regexes.py  informifier.py  pyproject.toml  test.py
informifier/: __init__.py  informifier.py  patterns.py  terminaisons.py
