[project]
name = "informifier"
authors = [{name="thjbdvlt"}]
version = "0.1.0"
description = "reconstituer l'infinitif d'un néoverbe du premier groupe."
readme = "READM.md"
requires-python = ">=3.8"

[project.urls]
Homepage= "https://github.com/thjbdvlt/informifier"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
